--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@babel/preset-env": "^7.22.14",
     "@types/jest": "^29.5.4",
     "babel-jest": "^29.6.4",
-    "jest": "^29.6.4"
+    "jest": "^29.6.4",
+    "prettier": "3.0.3"
   },
   "dependencies": {
     "joi": "^17.10.1"
